@@ -2,7 +2,7 @@ sg3-utils (1.25-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Fri, 05 Oct 2007 01:00:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Sat, 13 Oct 2007 16:00:00 -0400
 
 sg3-utils (1.24-1) unstable; urgency=low
 
